correct `getLast` call